--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header h1 {
   font-family:"lucidabright";
   text-shadow: 2px 2px 5px red;
   margin: 0;
+	text-align:left;
 }
 
 header h3 {
@@ -28,6 +29,11 @@ header h3 {
   color:white;
   text-shadow: 2px 2px 5px black;
   margin:0;
+	text-align:right;
+}
+header p {
+	color:white;
+	text-align:right;
 }
 
 nav {
