--- a/style.css
+++ b/style.css
@@ -254,7 +254,8 @@ grid-template-areas:
   grid-template-columns:auto 1FR;
   grid-template-areas:
     "header header"
-    "nav main"
+    "nav nav"
+    "main main"
     "aside aside"
     "footer footer";
     }
@@ -263,7 +264,8 @@ grid-template-areas:
   grid-template-columns:auto 1FR;
   grid-template-areas:
     "header header"
-    "nav main"
+    "nav nav"
+    "main main"
     "top top"
     "middle middle"
     "bottom bottom"
@@ -276,7 +278,8 @@ grid-template-areas:
   margin:1%;
   grid-template-areas:
     "header header"
-    "nav main"
+    "nav nav"
+    "main main"
     "fig2 fig2"
     "footer footer";   
     }
@@ -287,7 +290,8 @@ grid-template-areas:
   margin:1%;
   grid-template-areas:
     "header header"
-    "nav main"
+    "nav nav"
+    "main main"
     "footer footer";   
     }
 
@@ -322,7 +326,8 @@ grid-template-areas:
   grid-template-columns:auto 1fr 25%;
   grid-template-areas:
     "header header header"
-    "nav main aside"
+    "nav nav aside"
+    "main main aside"
     "footer footer footer";
     }
 
@@ -333,9 +338,9 @@ grid-template-areas:
   margin:1%;
   grid-template-areas:
     "header header header"
-    "nav main top"
-    "nav main middle"
-    "nav main bottom"
+    "nav nav top"
+    "main main middle"
+    "main main bottom"
     "footer footer footer";   
     }
 	
@@ -346,7 +351,8 @@ grid-template-areas:
   margin:1%;
   grid-template-areas:
     "header header"
-    "nav main"
+    "nav nav"
+	  "main main"
     "fig2 fig2"
     "footer footer";   
     }
@@ -358,7 +364,8 @@ grid-template-areas:
   margin:1%;
   grid-template-areas:
     "header header"
-    "nav main"
+    "nav nav"
+    "main main"
     "footer footer";   
     }
  .nestedgrid{
