--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ img {
 }
 
 body {
-  font-family: "lucida bright";
+  font-family: "Impact";
   background:#46A2E1;
   margin:0;
 }
@@ -18,7 +18,7 @@ header {
 header h1 {
   font-size:5vw;
   color:#001B87;
-  font-family:"lucidabright";
+  font-family:"Impact";
   text-shadow: 2px 2px 5px red;
   margin: 0;
 	text-align:left;
@@ -40,13 +40,12 @@ nav {
   grid-area:nav;
   background:#DA1A1A;
 text-align:center;
-	font-family:"lucida bright";
+	font-family:"Impact";
 }
     
 nav ul {
   padding:10px;
   margin:0;
-	list-style-type:none;
 }
 
 nav li {
@@ -54,7 +53,6 @@ nav li {
   list-style-type:none;
   font-size:1.5em;
   font-weight:bold;
-	display:inline;
 }
 
 nav li a {
