--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ text-align:center;
 nav ul {
   padding:10px;
   margin:0;
-	list-style-type:none;
+  display: inline-block;
 }
 
 nav li {
@@ -55,7 +55,7 @@ nav li {
   list-style-type:none;
   font-size:1.5em;
   font-weight:bold;
-	display:inline;
+	display:inline-block;
 }
 
 nav li a {
