--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header h1 {
   font-family:"Impact";
   text-shadow: 2px 2px 5px red;
   margin: 0;
-  text-align:left;
+  text-align:center;
 }
 
 header h3 {
@@ -29,7 +29,7 @@ header h3 {
   color:white;
   text-shadow: 2px 2px 5px black;
   margin:0;
-	text-align:right;
+	text-align:center;
 }
 header p {
 	color:white;
