--- a/style.css
+++ b/style.css
@@ -45,9 +45,13 @@ nav {
 }
     
 nav ul {
-  padding:10px;
+   list-stle-type: none;
+  padding:0;
   margin:0;
   display: inline-block;
+	overflow:hidden;
+	background-color:#DA1A1A;
+	
 }
 
 nav li {
@@ -56,17 +60,21 @@ nav li {
   font-size:1.5em;
   font-weight:bold;
   display:inline-block;
+	float:left;
 }
 
 nav li a {
+	display:block;
+	color:white;
+	text-align: center;
+	padding:16px;
   text-decoration:none;
-  color:white;
   float:left;
   border-right: 2px solid;
 	
 }
 
-a:hover {
+li a:hover {
   color:#001B87;
 }
 
