--- a/style.css
+++ b/style.css
@@ -5,49 +5,52 @@ img {
 body {
   font-family: "Impact";
   background:#46A2E1;
-  margin:0;
+  margin:2%;
 }
     
 header {
   grid-area:header;
   background:#46A2E1;
-  padding:5px;
-  text-align:center;
  }
 
 header h1 {
-  font-size:5vw;
+  font-size:6vw;
   color:#001B87;
   font-family:"Impact";
   text-shadow: 2px 2px 5px red;
-  margin: 0;
-  text-align:center;
+  margin: 2px 0;
 }
 
-header h3 {
-  font-size:2vw;
+header h4 {
+  font-size:3vw;
   color:white;
   text-shadow: 2px 2px 5px black;
-  margin:0;
-	text-align:center;
+  margin:1em 0 0 0;
+}
+header a {
+	text-decoration:none;
+	color: navy;
 }
 header p {
 	color:white;
-	text-align:right;
 }
 nav {
     grid-area:nav;
     background-color:#DA1A1A;
-    text-align:center;
-    font-family:"Impact";
-    float:left;
     font-size:125%;
-    padding:.5em;
-    margin:0;
     position: -webkit-sticky;
     position: sticky;
     top:0;
     z-index:999;
+}
+main {
+	background-color:#46A2E1;
+	color:white;
+	grid-area:main;
+}
+main a {
+	color: white;
+	font-family:bold;
 }
 
 .first {
