--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ footer p {
 	margin:0;
 	grid-gap: .5em;
 	text-align: center;
+	color: white;
 }
 /*---------------------------Mobile Layout Styles----------------------------*/
 .wrapper1 { /*index.html*/
