--- a/style.css
+++ b/style.css
@@ -105,7 +105,9 @@ nav li a {
 li a:hover {
   color:#001B87;
 }
-
+table {
+	border:none;
+}
 #navwrapper {
     display:grid;
     grid-template-areas:
